Table cell content wrap bug fix

--- a/laravel/public/css/framework.css
+++ b/laravel/public/css/framework.css
@@ -13,7 +13,6 @@
 .table th, .table td {
     padding: 0.3rem;
     max-width: 100%;
-    white-space: nowrap;
     vertical-align: middle;
     text-align: left;
 }
